added the teams and the odds that the user searches to the application as text content,  also added spreads as the specified market for the odds api

--- a/index.html
+++ b/index.html
@@ -113,18 +113,18 @@
                         <div class="columns">
                             <div class="column team ml-4">Teams</div>
 
-                            <div class="column has-text-centered">Odds</div>
+                            <div class="column has-text-centered">Price</div>
                         </div>
                         <div class="container-fluid has-border has-background-light">
                             <div class="columns">
-                                <div class="column team ml-4">Eagles</div>
+                                <div id="team-1" class="column team ml-4"></div> 
 
-                                <div class="column has-text-centered">-2.40</div>
+                                <div id="odds-for-team-1" class="column has-text-centered"></div>
                             </div>
                             <div class="columns">
-                                <div class="column team ml-4">Eagles</div>
+                                <div  id="team-2" class="column team ml-4"></div>
 
-                                <div class="column has-text-centered">-2.40</div>
+                                <div id="odds-for-team-2" class="column has-text-centered"></div>
                             </div>
                         </div>
                     </div>
