working on adding scores

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <div class="columns">
                             <div class="column team ml-4">Teams</div>
 
-                            <div class="column has-text-centered">Price</div>
+                            <div class="column has-text-centered">Spread</div>
                         </div>
                         <div class="container-fluid has-border has-background-light">
                             <div class="columns">
