added a page preloader using a gif

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+
+    <div id="preloader">
+
+    </div>
+
     <!-- container that wraps the whole page -->
 
     <!-- nav bar/header -->
@@ -105,7 +110,7 @@
                     <div id="game-area" class="m-3 is-size-5 pl-5 pr-5">
                         <div class="columns">
                             <div id="teams-line" class="column team ml-4 mt-3">Teams:</div>
-                            
+
                             <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
                         </div>
                         <div class="container-fluid has-border">
