--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookies Bank</title>
+    <link rel="stylesheet" href="./assets/css/glide.core.css">
+    <link rel="stylesheet" href="./assets/css/glide.theme.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
 
-    <div id="preloader">
 
-    </div>
 
     <!-- container that wraps the whole page -->
 
@@ -32,36 +32,41 @@
             </a>
         </div>
 
+        <div class="glide">
+            <div class="glide__track" data-glide-el="track">
+                <ul class="glide__slides">
+                    <a class="navbar-item glide__slide">
+                       Game #1
+                    </a>
 
+                    <a class="navbar-item glide__slide">
+                        Game #2
+                    </a>
+                    <a class="navbar-item glide__slide">
+                        Game #3
+                    </a>
+
+                    <a class="navbar-item glide__slide">
+                        Game #4
+                    </a>
+
+                    <a class="navbar-item glide__slide">
+                        Game #5
+                    </a>
+
+                    <a class="navbar-item glide__slide">
+                        Game #6
+
+                    </a>
+
+                    <a class="navbar-item glide__slide">
+                        Game #7
+                    </a>
+                </ul>
+            </div>
+        </div>
         <div id="navbarBasicExample" class="navbar-menu is-active">
 
-            <a class="navbar-item">
-                Game #1
-            </a>
-
-            <a class="navbar-item">
-                Game #2
-            </a>
-            <a class="navbar-item">
-                Game #3
-            </a>
-
-            <a class="navbar-item">
-                Game #4
-            </a>
-
-            <a class="navbar-item">
-                Game #5
-            </a>
-
-            <a class="navbar-item">
-                Game #6
-
-            </a>
-
-            <a class="navbar-item">
-                Game #7
-            </a>
 
             <!-- search bar -->
             <div class="navbar-end ">
@@ -132,8 +137,10 @@
     </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/scrapId.js"></script>
 </body>
 
 </html>
