added a footer at the bottom of the page to credit apis and all devs involved in the devolpment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </ul>
             </div>
         </div>
-        
+
     </nav>
 
     <div id="main-content" class="hidden">
@@ -110,7 +110,7 @@
 
                                 <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
                             </div>
-                            <div id="odds-background"class="container-fluid has-border">
+                            <div id="odds-background" class="container-fluid has-border">
                                 <div class="columns">
                                     <div id="team-1" class="column is-3 team ml-4 "></div>
                                     <div id="team-1-score" class="column"></div>
@@ -129,6 +129,16 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Bookies Bank</strong> by <i>Peyton Touma, Adrian Randoll, Jandrei Tim, Sabrina Giannette, and
+                    William Tsai</i></a>. The APIs used are,
+                <a href="https://the-odds-api.com/">The Odds API </a>and
+                <a href="https://rapidapi.com/fluis.lacasse/api/americanfootballapi/"> The American Football API</a>.
+            </p>
+        </div>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
