added media queries and worked on displaying all games from the all btn event listner

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="main-content" class="hidden">
         <div class="container">
             <div class="columns">
-                <div id="side-bar" class="column is-3">
+                <div id="side-bar" class="column is-12-mobile is-3-tablet">
                     <!-- left side bar -->
                     <h1>NFL Team Search</h1>
                     <div id="side-bar-btns">
@@ -94,12 +94,12 @@
                     </div>
                 </div>
 
-                <div id="main-area" class="column is-9">
+                <div id="main-area" class="column is-12-mobile is-9-tablet">
                     <!-- main content middle -->
                     <h2 id="main-section-nav-bar" class="main-btns">
                         <!-- btns that are in the top middle of the page -->
-                        <button class="button is-link top-btns">All</button>
-                        <button class="button is-link top-btns">Live</button>
+                        <button id="all-button" class="button is-link top-btns">All</button>
+                        <button id="live-button" class="button is-link top-btns">Live</button>
                         <button class="button is-link top-btns">Odds</button>
                         <button class="button is-link top-btns">Scheduled</button>
                     </h2>
@@ -130,7 +130,7 @@
     </div>
 
     <footer class="footer">
-        <div class="content has-text-centered">
+        <div class="content has-text-centered column is-12-mobile is-9-tablet">
             <p>
                 <strong>Bookies Bank</strong> by <i>Peyton Touma, Adrian Randoll, Jandrei Tim, Sabrina Giannette, and
                     William Tsai</i></a>. The APIs used are,
