--- a/index.html
+++ b/index.html
@@ -110,16 +110,18 @@
 
                                 <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
                             </div>
-                            <div id="odds-background" class="container-fluid has-border">
-                                <div class="columns">
-                                    <div id="team-1" class="column is-3 team ml-4 "></div>
-                                    <div id="team-1-score" class="column"></div>
-                                    <div id="odds-for-team-1" class="column has-text-centered"></div>
-                                </div>
-                                <div class="columns">
-                                    <div id="team-2" class="column is-3 team ml-4"></div>
-                                    <div id="team-2-score" class="column"></div>
-                                    <div id="odds-for-team-2" class="column has-text-centered"></div>
+                            <div id="game-juicer"> 
+                                <div id="odds-background" class="container-fluid has-border">
+                                    <div class="columns">
+                                        <div id="team-1" class="column is-3 team ml-4 "></div>
+                                        <div id="team-1-score" class="column"></div>
+                                        <div id="odds-for-team-1" class="column has-text-centered"></div>
+                                    </div>
+                                    <div class="columns">
+                                        <div id="team-2" class="column is-3 team ml-4"></div>
+                                        <div id="team-2-score" class="column"></div>
+                                        <div id="odds-for-team-2" class="column has-text-centered"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
