updated media queries

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
                             </div>
                             <div id="game-juicer"> 
-                                <div id="odds-background" class="container-fluid has-border">
+                                <div id="odds-background" class="has-border">
                                     <div class="columns">
                                         <div id="team-1" class="column is-3 team ml-4 "></div>
                                         <div id="team-1-score" class="column"></div>
