fixed sizing when page is phone screen size by adding a scroll bar to game area so a user can scroll if the content generated was to much height inside of game area

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     </div>
 
 
-    <!-- container that wraps the whole page -->
 
     <!-- nav bar/header -->
     <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -111,7 +110,7 @@
 
                                 <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
                             </div>
-                            <div id="game-juicer"> 
+                            <div id="game-juicer">
                                 <div id="odds-background" class="has-border">
                                     <div class="columns">
                                         <div id="team-1" class="column is-3 team ml-4 "></div>
@@ -131,7 +130,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <footer class="footer">
         <div class="content has-text-centered column is-12-mobile is-9-tablet">
             <p>
