--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                         <!-- btns that are in the top middle of the page -->
                         <button id="all-button" class="button is-link top-btns">All</button>
                         <button id="live-button" class="button is-link top-btns">Live</button>
-                        <button class="button is-link top-btns">Odds</button>
-                        <button class="button is-link top-btns">Scheduled</button>
+                        <button id="scheduled-button" class="button is-link top-btns">Scheduled</button>
                     </h2>
                     <div id="game-container">
                         <div id="game-area" class="m-3 is-size-5 pl-5 pr-5">
