cleaned up the classes on the img tags

--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
             <div class="glide__track" data-glide-el="track">
                 <ul class="glide__slides">
                     <a class="navbar-item glide__slide">
-                       <img class="team" src="./assets/photos/NFL logos/49ers.png">
+                        <img src="./assets/photos/NFL logos/49ers.png">
                     </a>
 
                     <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Bears.png">
+                        <img src="./assets/photos/NFL logos/Bears.png">
                     </a>
                     <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Bengals.png">
-                    </a>
-
-                    <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Bills.png">
+                        <img src="./assets/photos/NFL logos/Bengals.png">
                     </a>
 
                     <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Dolphins.png">
+                        <img src="./assets/photos/NFL logos/Bills.png">
                     </a>
 
                     <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Ravens.png">
+                        <img src="./assets/photos/NFL logos/Dolphins.png">
+                    </a>
+
+                    <a class="navbar-item glide__slide">
+                        <img src="./assets/photos/NFL logos/Ravens.png">
 
                     </a>
 
                     <a class="navbar-item glide__slide">
-                        <img class="team" src="./assets/photos/NFL logos/Jaguars.png">
+                        <img src="./assets/photos/NFL logos/Jaguars.png">
                     </a>
                 </ul>
             </div>
