added comments to html

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </div>
     </div>
     </div>
+    <!--footer to credit devs -->
     <footer class="footer">
         <div class="content has-text-centered column is-12-mobile is-9-tablet">
             <p>
