worked on resize a little more

--- a/index.html
+++ b/index.html
@@ -103,23 +103,23 @@
                         <button id="scheduled-button" class="button is-link top-btns">Scheduled</button>
                     </h2>
                     <div id="game-container">
-                        <div id="game-area" class="m-3 is-size-5 pl-5 pr-5">
+                        <div id="game-area" class="m-3 is-size-12 pl-5 pr-5">
                             <div class="columns">
-                                <div id="teams-line" class="column team ml-4 mt-3">Teams:</div>
+                                <div id="teams-line" class="column team ml-1 mt-3">Teams:</div>
 
-                                <div id="spread" class="column has-text-centered ml-6 mt-3">Spread:</div>
+                                <div id="spread" class="column  ml-1 mt-3">Spread:</div>
                             </div>
                             <div id="game-juicer">
                                 <div id="odds-background" class="has-border">
                                     <div class="columns">
                                         <div id="team-1" class="column is-3 team ml-4 "></div>
                                         <div id="team-1-score" class="column"></div>
-                                        <div id="odds-for-team-1" class="column has-text-centered"></div>
+                                        <div id="odds-for-team-1" class="column "></div>
                                     </div>
                                     <div class="columns">
                                         <div id="team-2" class="column is-3 team ml-4"></div>
                                         <div id="team-2-score" class="column"></div>
-                                        <div id="odds-for-team-2" class="column has-text-centered"></div>
+                                        <div id="odds-for-team-2" class="column "></div>
                                     </div>
                                 </div>
                             </div>
